# AWS-SeqRec-MLOps

./: .flake8  .gitignore  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.markdown  README.md  dashboard-config.yaml  locustfile.py  mypy.ini  pyproject.toml  pytest.ini  test.ipynb
.github/workflows/: ci.yml  pr_agent.yml
api_gateway/: Dockerfile  deployment.yaml  main.py  requirements.txt  service.yaml
configs/: item2vec.yaml  ranking_sequence.yaml
data_pipeline_aws/: README.markdown  README.md  glue.py  test_kinesis.py
data_pipeline_aws/airflow/: airflow.requirements.txt  docker-compose.yml
data_pipeline_aws/check_drift/: Dockerfile  app.py
data_pipeline_aws/glue_data_quality/: parent_asin_stats.dqdl  user_stats.dqdl
data_pipeline_aws/lambda/: Dockerfile  feature_store.yaml  lambda_function.py  requirements.txt
feature_store/: deployment.yaml  entities.py  feast.Dockerfile  feature_store.yaml  feature_views.py  main.py  requirements.txt  service.yaml
jenkins-stack/: Chart.yaml  Dockerfile.jenkins  values.yaml
jenkins-stack/templates/: deployment.yaml  istio-vs.yaml  pv.yaml  pvc.yaml  rbac.yaml  service.yaml  storageclass.yaml
jenkins-stack/watcher-pod/: Dockerfile.watcher  deployment.yaml  service.yaml  watch_promotion.py
mlflow-stack/: Chart.yaml  mlflow.Dockerfile  values.yaml
mlflow-stack/templates/: minio-deployment.yaml  (+11 more)
notebooks/: 00-explore-data.ipynb  01-prep-data.ipynb  02-upload-data.ipynb  holdout.parquet
qdrant/: Chart.yaml
ray-cluster/: ray-pvc.yaml  ray-worker-pvc.yaml  ray.Dockerfile  requirements.txt  values.yaml
serving-cluster/: Dockerfile.triton  deploy_kserve.sh  inferenceservice-triton-gpu.yaml  kubeconfig-serving.yaml
src/: check_oltp_max_timestamp.py  data_prep_utils.py  sampling_raw_data.py
terraform_ec2/: main.tf  terraform.tfvars  variables.tf
terraform_eks/: outputs.tf  readme
tests/: test_glue.py  test_item2vec.py  test_onnx.py  test_ranking_sequence.py  test_sampling_raw_data.py
ui/: feature_store.yaml  main.py  requirements.txt
(+50 files in other folders)
